--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -20,8 +20,3 @@
         height: -webkit-fill-available;
     }
 }
-
-@media only screen and (max-width: 1080px),
-       screen and (max-height: 400px) {
-           margin-top: -0.5em;
-       }
